Fixed gameLog max height and overflow

--- a/src/main/webapp/css/game/currentGame.css
+++ b/src/main/webapp/css/game/currentGame.css
@@ -7,3 +7,13 @@
 /*    left: 0;*/
 /*    z-index: -1;*/
 /*}*/
+
+#playersStatus {
+    position: relative;
+    margin: 0;
+}
+
+#gameLog{
+    margin: 0;
+    overflow-y: auto;
+}
