--- a/src/main/webapp/css/utils/playersStatus.css
+++ b/src/main/webapp/css/utils/playersStatus.css
@@ -1,9 +1,3 @@
-
-#playersStatus {
-    position: relative;
-    margin: 0;
-}
-
 #circle {
     border-radius: 50%;
     border: 2px solid #000;
